tests/cases/error/error_invalid_instruction.out
error: Parse error
 --> tests/cases/error/error_invalid_instruction.rapt:2:1
  |
1 | # line 1
2 | FLORG --foo "bar"
  | ^^^^^ Expected statement
3 | RUN ls -l
4 | RUN ls -l
5 | RUN ls -l
  |
